--- a/Productivity/style.css
+++ b/Productivity/style.css
@@ -1,5 +1,5 @@
 html {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color: #333;
 }
 
@@ -61,9 +61,15 @@ span {
     overflow: hidden;
 }
 
-label {
-    padding: 1%;
-}
 input {
-    margin: 2%;
+    text-align: center;
+}
+
+#CharacterName{
+    margin-top: 2%;
+    float: left;
+}
+
+.bodyish input {
+    margin-right: 10%;
 }
